--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -72,9 +72,9 @@ OUTLINE
     - Does this process of self-objectification also lead women to objectify other women?
   - Women objectifying other women
     - Lots of evidence, but we don't know if this happens interpersonally
-  - Interpersonal objectifcation research is a whole thing now, but there are no studies (or theoretical models) that include women-on-women interpersonal objectification processes. 
-  - Relationships and objectification 
-    - Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships. 
+  - Interpersonal objectifcation research is a whole thing now, but there are no studies (or theoretical models) that include women-on-women interpersonal objectification processes.
+  - Relationships and objectification
+    - Both romantic relationships and relationships in general have been studies in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
   - Authenticity paragraph?
   - Current Study
   - Alternative predictions
@@ -88,7 +88,7 @@ Some studies have found that women objectify other women to a greater extent tha
 
 SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995, CITE saguy skype study, calogero video walking study], often times feel ‘looked at’ within interpersonal interactions [@argyle1969], and will more than likely internalize the objectifying gaze on physical self [@young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredricksonetal1998]. We don't know about women-on-women interpersonal objectification. What might be different?
 
-Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successfuol relationship, thus, the "college relationships condition may highten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship biulding skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. 
+Self-objectification has been found to occur after a mere relationship prime among women [@sanchez2008romance] because in our culture women need to look attractive to obtain and maintain successfuol relationship, thus, the "college relationships condition may highten self-objectification and the evaluation of other women in a sexualized way. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, and women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship and they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], less is known about first dates. But this literature is also only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship biulding skills in general (including same-sex friendships) [CITE PWQ paper I reviewed, Yoder editor]. Empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@quinnetal]. 
 
 MAYBE SEPARATE PARAGRAPH ABOUT AUTHENTICITY LINK SPECIFICALLY. And how woman-woman interpersonal objectificaiton preocesses might diverge from this process. [again CITE PWQ paper I reviewed, Yoder editor]. 
 
