--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -138,29 +138,44 @@ coders Hannah et al.
 \begin{document}
 \maketitle
 
-Theorists across diverse disciplines have explored the multiple ways
-that the body conveys social meaning, as well as how these meanings
-shape gendered experiences, especially during interpersonal interactions
-with members of different social groups (``Engendered lives,'' 1993,
-Garcia, Earnshaw, and Quinn (2016)). Objectification theory, a valuable
-theoretical framework proposed by Roberts and Fredrickson (1997) which
-works to contextualize female bodies as socio-cultural constructions,
-can be employed to illuminate the gender oppression and negative lived
-experiences of girls and women. Empirical evidence illustrates how women
-continue to be objects of interpersonal discrimination and expereince
-daily sexist hassles (Swim, Hyers, Cohen, \& Ferguson, 2001). One form
-of interpersonal discrimination women face is the process by which their
-whole being is viewed as a collection of sexualized body parts valued
-predominantly for commodification, a phenomena termed sexual
-objectification (Bartky, 1990). Sexual objectification occurs with both
-\enquote{endless variety and monotonous similarity,} and is thus
-mediated by unique combinations of race, ethnicity, sexuality, age, and
-class (Fredrickson, Hendler, Nilsen, O'Barr, \& Roberts, 2011; Rubin,
-1975, cited in Fraser and Nicholson (1989), p.~28). Amid such
-heterogeneity though, \enquote{having a reproductively mature female
-body} proposed by Roberts and Fredrickson (1997) is likely to create a
-shared vulnerability to sexual objectification and a variety of shared
-negative experiences as a result.
+OUTLINE - Introduction: Objectification theory says stuff. Recently
+we've learned about interpersonal objectification but we only know it
+about mixed gender. We know women objectify each other, but what about
+in interpersonal interactions? - Self-objectification - SSO versus TSO -
+Does this process of self-objectification also lead women to objectify
+other women? - Women objectifying other women - Lots of evidence, but we
+don't know if this happens interpersonally - Interpersonal
+objectifcation research is a whole thing now, but there are no studies
+(or theoretical models) that include women-on-women interpersonal
+objectification processes. - Relationships and objectification - Both
+romantic relationships and relationships in general have been studies in
+the context of objectification, but neither of these literatures have
+investigated specifically same-gender relationships. - Authenticity
+paragraph? - Current Study - Alternative predictions
+
+Roberts and Fredrickson (1997)\enquote{s Objectification Theory,
+suggests that women are objectified in interpersonal encounters, and
+that the effect might be strongest from men, but possibly also from
+women. Psychological researchers studying the sexual objectification of
+women, and the resulting self-objectification that follows, have in
+recent years explored the interpersonal process of the objectification -
+self-objectification link. For exmaple, in a face-to-face mixed-gender
+dyadic study, Garcia, Earnshaw, and Quinn (2016) found that men's
+reported objectificaiton of their female interaction partner during an
+interaction was associated with increased sefl-objectification reported
+by their partner. Gervais, Sáez, Riemer, and Klein (2020) has reviewed
+the literature on interpersonal self-objectification and has organized
+the the process in a theoretical model called the SIMO, but this model
+is only relevant for mixed-gender encouters. Although there is ample
+evidence that women objectify other women (Loughnan et al., 2015a; Puvia
+\& Vaes, 2013), there is currently no studies investigating the process
+of interpersonal objectification same-gender interactions. Does
+objectification by a female interaction partner have the same downstream
+negative consequences as being objectified by a male interaction
+partner? For example, perhaps women could be amplifying each others}
+self-objectification as they get ready to go out for the night,
+\emph{before} the theoretical encounters with men outlined in Gervais et
+al. (2020) occur.
 
 Self-objectification is a multidimensional process that accounts for the
 cognitive mechanism that translates experiences of sexualization at the
@@ -177,26 +192,59 @@ which can lead to a state of self-objectification (Calogero et al.,
 possessing trait-level self-objectification (TSO) may interact to
 influence experiences of feeling like a body, or state
 self-objectification (SSO) (CITE swimsuit sweater, Garcia et al., 2016).
+Does this habit self-objectification lead women to also objectify other
+women, possibly to compare oneself?
 
-Studies have shown that within social encounters women are gazed at more
-than men (Briton \& Hall, 1995, CITE saguy skype study, calogero video
-walking study), often times feel \enquote{looked at} within
-interpersonal interactions (Argyle \& Williams, 1969), and will more
-than likely internalize the objectifying gaze on physical self (Young,
-1979). Moreover, perhaps the most adverse effect of objectifying
-treatment is that it effectively socializes girls and women to treat
-themselves as objects to be looked at and evaluated, an effect termed
+Some studies have found that women objectify other women to a greater
+extent than they objectify men (Loughnan et al., 2015a). Women objectify
+(dehumanized) sexualized targets presented as images (Puvia \& Vaes,
+2013), but we know next to nothing about interpersonal sexual
+objectification among women and what the immediate effects might be.
+Further, do women objectify non-sexualized women they are interacting
+with? What might be different for same-gender interactions? Harsey and
+Zurbriggen (2020) found that self-objectification was related to the
+objectification of women to a similar degree for men and women
+participants, although men scored high than women on a measure of belief
+that objectification of women is natural for men.
+
+SIMO model and literature review (Gervais et al., 2020). Studies have
+shown that within social encounters women are gazed at more than men
+(Briton \& Hall, 1995, CITE saguy skype study, calogero video walking
+study), often times feel \enquote{looked at} within interpersonal
+interactions (Argyle \& Williams, 1969), and will more than likely
+internalize the objectifying gaze on physical self (Young, 1979).
+Moreover, perhaps the most adverse effect of objectifying treatment is
+that it effectively socializes girls and women to treat themselves as
+objects to be looked at and evaluated, an effect termed
 self-objectification (Bartky, 1990; Berger, Cohen, \& Zelditch Jr, 1972;
-L. Fredrickson, Roberts, M. Noll, Quinn, \& Twenge, 1998).
+L. Fredrickson, Roberts, M. Noll, Quinn, \& Twenge, 1998). We don't know
+about women-on-women interpersonal objectification. What might be
+different?
 
-ENTIRE PARAGRAPH ON MODERN (POST-2016) STUDIES OF INTERPERSONAL
-OBJECTIFICATION.
+Self-objectification has been found to occur after a mere relationship
+prime among women (Sanchez \& Broccoli, 2008) because in our culture
+women need to look attractive to obtain and maintain successfuol
+relationship, thus, the ``college relationships condition may highten
+self-objectification and the evaluation of other women in a sexualized
+way. Researchers have also studied interpersonal objectification and
+self-objectification in romantic relationships (Strelan \& Pagoudis,
+2018). Evidence is mixed, and women can sometimes have positive outcomes
+from appearance valuation within the context of an established romantic
+relationship and they experience less SSO after appearance comments
+within romantic relationships (Meltzer, 2020), less is known about first
+dates. But this literature is also only about heterosexual
+relationships. A recent study has investigated the effect of
+self-objectification on the reduction of relationship biulding skills in
+general (including same-sex friendships) {[}CITE PWQ paper I reviewed,
+Yoder editor{]}. Empirical evidence reveals that objectification
+manifests through inauthenticity in romantic relationships (Brunell et
+al., 2010), adverse attitudes in regard to career aspirations, and a
+decrease in concentration and impairment in female cognitive performance
+(D. M. Quinn, Chaudoir, \& Kallen, 2011).
 
-Empirical evidence reveals that objectification manifests through
-inauthenticity in romantic relationships (Brunell et al., 2010), adverse
-attitudes in regard to career aspirations, and a decrease in
-concentration and impairment in female cognitive performance (D. M.
-Quinn, Chaudoir, \& Kallen, 2011).
+MAYBE SEPARATE PARAGRAPH ABOUT AUTHENTICITY LINK SPECIFICALLY. And how
+woman-woman interpersonal objectificaiton preocesses might diverge from
+this process. {[}again CITE PWQ paper I reviewed, Yoder editor{]}.
 
 In the current study, we sought to examine what occurs during an
 interaction in which one or both partners are objectifying each other,
@@ -215,6 +263,14 @@ self-objectification. We also expect to find a negative relationship
 between self-state objectification and interaction authenticity, and
 that interaction authenticity will be positively related to cognitive
 performance, relationship agency, and career aspirations.
+
+Puvia and Vaes (2013) would alternatively predict that women's tendency
+to self-objectify (TSO) leads them to objectify other women
+(\ldots{}well, dehumanize a sexualized woman, but also Strelan and
+Hargreaves (2005) would predict the TSO-\textgreater{}SOO link and
+Harsey and Zurbriggen (2020) too), and this is mediated by the woman's
+own state self-objectification (SSO). So we also tested this as a
+possible alternative model.
 
 \section{Methods}\label{methods}
 
@@ -649,28 +705,51 @@ these analyses.
 \section{Discussion}\label{discussion}
 
 As stated previously, we did not find a significant effect between actor
-SSO and actor authenticity (\(\beta\)= -.10, \(p\)=.38), which suggests
-that there is not sufficient evidence to support the claim that partner
-objectification is the cause for the diverse range of negative effects
-related to relationship inauthenticity. However, we did observe a
-significant partner effect of objectification on actor
-self-objectification, which does align with our hypothesis that
-theorized objectification from other women can also cause women to
-self-objectify just as they do within interactions between male-female
-pairs. The results of this study demonstrate the complex and ambivalent
-nature of female sexual objectification and additionally highlight the
-psychological and social consequences of such objectification processes
-on women's social relationships and well-being. The sample of the
-current study was comprised of Western women, being that sexual
-objectification is most prevalent in this culture (Loughnan et al.,
-2015), and research on objectification conducted outside of Western or
-Westernized countries is scarce (Moradi \& Huang, 2008). Because
-\enquote{bodies exist within social and cultural contexts, and hence are
-also constructed through sociocultural practices and discourses}
-(Roberts \& Fredrickson, 1997, p. 174), it is important to consider how
-diverse social identities within unique cultural contexts may inform
-sexual objectification phenomenon to test the cross-cultural
-applicability of theoretical frameworks (Loughnan et al., 2015).
+SSO and actor authenticity, which suggests that there is not sufficient
+evidence to support the claim that partner objectification is the cause
+for the diverse range of negative effects related to relationship
+inauthenticity. However, we did observe a significant partner effect of
+objectification on actor self-objectification, which does align with our
+hypothesis that theorized objectification from other women can also
+cause women to self-objectify just as they do within interactions
+between male-female pairs.
+
+\subsection{Sexism and Sexual
+Discrimination}\label{sexism-and-sexual-discrimination}
+
+Sexism has recently been found to be related to the objectification of
+women, but not men, for both men and women (Harsey \& Zurbriggen, 2020).
+Empirical evidence illustrates how women continue to be objects of
+interpersonal discrimination and expereince daily sexist hassles (Swim,
+Hyers, Cohen, \& Ferguson, 2001). One form of interpersonal
+discrimination women face is the process by which their whole being is
+viewed as a collection of sexualized body parts valued predominantly for
+commodification, a phenomena termed sexual objectification (Bartky,
+1990). Sexual objectification occurs with both \enquote{endless variety
+and monotonous similarity,} and is thus mediated by unique combinations
+of race, ethnicity, sexuality, age, and class (Fredrickson, Hendler,
+Nilsen, O'Barr, \& Roberts, 2011; Rubin, 1975, cited in Fraser and
+Nicholson (1989), p.~28). Amid such heterogeneity though,
+\enquote{having a reproductively mature female body} proposed by Roberts
+and Fredrickson (1997) is likely to create a shared vulnerability to
+sexual objectification and a variety of shared negative experiences as a
+result.
+
+\subsection{Limitations and Future
+Directions}\label{limitations-and-future-directions}
+
+\subsubsection{Sample Characteristics}\label{sample-characteristics}
+
+The sample of the current study was comprised of Western women, being
+that sexual objectification is most prevalent in this culture (Loughnan
+et al., 2015b), and research on objectification conducted outside of
+Western or Westernized countries is scarce (Moradi \& Huang, 2008).
+Because \enquote{bodies exist within social and cultural contexts, and
+hence are also constructed through sociocultural practices and
+discourses} (Roberts \& Fredrickson, 1997, p. 174), it is important to
+consider how diverse social identities within unique cultural contexts
+may inform sexual objectification phenomenon to test the cross-cultural
+applicability of theoretical frameworks (Loughnan et al., 2015b).
 Further, sexualzing experiences and self-objectification are thought to
 begin a very young age, and thus, researchers have only recently begun
 to examine such experiences among children (Bury, Tiggemann, \& Slater,
@@ -681,17 +760,36 @@ research among younger and older individuals is needed, especially
 because self-objectification may change over time (Roberts \&
 Fredrickson, 1997). It may be valuable to question the extent to which
 children, adolescents, or emerging adults of different races or
-ethnicities are exposed to varied amounts of sexulizing content. Also,
-future experiments or longitudinal studies should explore the external
-validity of the notions of self-objectification and how the
-operalization of self-objectification may be improved. Regardless, the
-results from the current analysis highlight how subtle forms of sexist
-discrimination operate to inform prevention and intervention efforts in
-both clinical and educational contexts. These results are quite useful
-for promoting mental health and within early action programs for girls
-and young women, where scholars and practitioners might provide the
-tools necessary to circumvent or mitigate negative effects on
-self-objectification, and combat such experiences.
+ethnicities are exposed to varied amounts of sexulizing content.
+
+\subsubsection{Measurement}\label{measurement}
+
+Also, future experiments or longitudinal studies should explore the
+external validity of the notions of self-objectification and how the
+operalization of self-objectification may be improved.
+
+\subsubsection{Alternative Model}\label{alternative-model}
+
+Puvia and Vaes (2013) alternative model. TSO -\textgreater{} SOO,
+mediated by SSO.
+
+\subsection{Clinical Implications}\label{clinical-implications}
+
+Regardless, the results from the current analysis highlight how subtle
+forms of sexist discrimination operate to inform prevention and
+intervention efforts in both clinical and educational contexts. These
+results are quite useful for promoting mental health and within early
+action programs for girls and young women, where scholars and
+practitioners might provide the tools necessary to circumvent or
+mitigate negative effects on self-objectification, and combat such
+experiences.
+
+\section{Conclusion}\label{conclusion}
+
+The results of this study demonstrate the complex and ambivalent nature
+of female sexual objectification and additionally highlight the
+psychological and social consequences of such objectification processes
+on women's social relationships and well-being.
 
 \section{References}\label{references}
 
@@ -755,11 +853,6 @@ Dahl, D. B., Scott, D., Roosen, C., Magnusson, A., \& Swinton, J.
 (2019). \emph{Xtable: Export tables to latex or html}. Retrieved from
 \url{https://CRAN.R-project.org/package=xtable}
 
-\hypertarget{ref-Kaschak}{}
-Engendered lives: A new psychology of womens experience. (1993).
-\emph{Choice Reviews Online}, \emph{30}(07).
-doi:\href{https://doi.org/10.5860/choice.30-4102}{10.5860/choice.30-4102}
-
 \hypertarget{ref-frasernicholson1989}{}
 Fraser, N., \& Nicholson, L. (1989). Social criticism without
 philosophy: An encounter between feminism and postmodernism.
@@ -788,6 +881,17 @@ interactions. \emph{Psychology of Women Quarterly}, \emph{40}(2),
 Garcia, R. L., Kenny, D. A., \& Ledermann, T. (2015). Moderation in the
 actor--partner interdependence model. \emph{Personal Relationships},
 \emph{22}(1), 8--29.
+
+\hypertarget{ref-gervais2020social}{}
+Gervais, S. J., Sáez, G., Riemer, A. R., \& Klein, O. (2020). The social
+interaction model of objectification: A process model of goal-based
+objectifying exchanges between men and women. \emph{British Journal of
+Social Psychology}, \emph{59}(1), 248--283.
+
+\hypertarget{ref-harsey2020men}{}
+Harsey, S. J., \& Zurbriggen, E. L. (2020). Men and women's
+self-objectification, objectification of women, and sexist beliefs.
+\emph{Self and Identity}, 1--8.
 
 \hypertarget{ref-R-purrr}{}
 Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming
@@ -826,9 +930,15 @@ Ledermann, T., \& Kenny, D. A. (2017). Analyzing dyadic data with
 multilevel modeling versus structural equation modeling: A tale of two
 methods. \emph{Journal of Family Psychology}, \emph{31}(4), 442.
 
+\hypertarget{ref-loughnan2015exploring}{}
+Loughnan, S., Fernandez-Campos, S., Vaes, J., Anjum, G., Aziz, M.,
+Harada, C., \ldots{} Tsuchiya, K. (2015a). Exploring the role of culture
+in sexual objectification: A seven nations study. \emph{Revue
+Internationale de Psychologie Sociale}, \emph{28}(1), 125--152.
+
 \hypertarget{ref-loughnan2015}{}
 Loughnan, S., Fernandez-Campos, S., Vaes, J., Anjum, G., Aziz, M.,
-Harada, C., \ldots{} Tsuchiya, K. (2015). Exploring the role of culture
+Harada, C., \ldots{} Tsuchiya, K. (2015b). Exploring the role of culture
 in sexual objectification: A seven nations study. \emph{Revue
 Internationale de Psychologie Sociale}, \emph{28}(1), 125--152.
 
@@ -843,6 +953,11 @@ McFarlin, D. B., \& Blascovich, J. (1984). On the remote associates test
 (rat) as an alternative to illusory performance feedback: A
 methodological note. \emph{Basic and Applied Social Psychology},
 \emph{5}(3), 223--229.
+
+\hypertarget{ref-meltzer2020women}{}
+Meltzer, A. L. (2020). Women can benefit from sexual and physical
+valuation in the context of a romantic relationship. \emph{Personality
+and Social Psychology Bulletin}, \emph{46}(2), 243--257.
 
 \hypertarget{ref-moradi2008}{}
 Moradi, B., \& Huang, Y.-P. (2008). Objectification theory and
@@ -878,6 +993,11 @@ Helping students to 'think with data' using r. \emph{The R Journal},
 Pruim, R., Kaplan, D., \& Horton, N. (2016). \emph{MosaicData: Project
 mosaic data sets}. Retrieved from
 \url{https://CRAN.R-project.org/package=mosaicData}
+
+\hypertarget{ref-puvia2013being}{}
+Puvia, E., \& Vaes, J. (2013). Being a body: Women's appearance related
+self-views and their dehumanization of sexually objectified female
+targets. \emph{Sex Roles}, \emph{68}(7-8), 484--495.
 
 \hypertarget{ref-quinnetal}{}
 Quinn, D. M., Chaudoir, S. R., \& Kallen, R. W. (2011). Performance and
@@ -918,6 +1038,12 @@ like a body: Objectification can lead women to narrow their presence in
 social interactions. \emph{Psychological Science}, \emph{21}, 178--82.
 doi:\href{https://doi.org/10.1177/0956797609357751}{10.1177/0956797609357751}
 
+\hypertarget{ref-sanchez2008romance}{}
+Sanchez, D. T., \& Broccoli, T. L. (2008). The romance of
+self-objectification: Does priming romantic relationships induce states
+of self-objectification among women? \emph{Sex Roles}, \emph{59}(7-8),
+545--554.
+
 \hypertarget{ref-R-lattice}{}
 Sarkar, D. (2008). \emph{Lattice: Multivariate data visualization with
 r}. New York: Springer. Retrieved from
@@ -927,6 +1053,16 @@ r}. New York: Springer. Retrieved from
 Stanley, D. (2018). \emph{ApaTables: Create american psychological
 association (apa) style tables}. Retrieved from
 \url{https://CRAN.R-project.org/package=apaTables}
+
+\hypertarget{ref-strelan2005women}{}
+Strelan, P., \& Hargreaves, D. (2005). Women who objectify other women:
+The vicious circle of objectification? \emph{Sex Roles},
+\emph{52}(9-10), 707--712.
+
+\hypertarget{ref-strelan2018birds}{}
+Strelan, P., \& Pagoudis, S. (2018). Birds of a feather flock together:
+The interpersonal process of objectification within intimate
+heterosexual relationships. \emph{Sex Roles}, \emph{79}(1-2), 72--82.
 
 \hypertarget{ref-swimetal}{}
 Swim, J. K., Hyers, L. L., Cohen, L. L., \& Ferguson, M. J. (2001).
