--- a/references.bib
+++ b/references.bib
@@ -29,16 +29,7 @@
   publisher={Taylor \& Francis}
 }
 
-@article{@article{meltzer2020women,
-  title={Women can benefit from sexual and physical valuation in the context of a romantic relationship},
-  author={Meltzer, Andrea L},
-  journal={Personality and Social Psychology Bulletin},
-  volume={46},
-  number={2},
-  pages={243--257},
-  year={2020},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-},
+@article{meltzer2020women,
   title={Women can benefit from sexual and physical valuation in the context of a romantic relationship},
   author={Meltzer, Andrea L},
   journal={Personality and Social Psychology Bulletin},
